--- a/package.json
+++ b/package.json
@@ -1,21 +1,57 @@
 {
   "name": "bookmark-plugin",
   "version": "0.1.0",
-  "description": "A Chrome bookmark manager extension written in TypeScript.",
-  "main": "src/background.ts",
+  "description": "A Chrome bookmark manager extension written in React + TypeScript with Vite.",
+  "type": "module",
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc --watch"
+    "dev": "vite build --watch",
+    "build": "vite build",
+    "preview": "vite preview",
+    "watch": "vite build --watch",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext ts,tsx --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "keywords": [
     "chrome-extension",
     "bookmark",
-    "typescript"
+    "react",
+    "typescript",
+    "vite"
   ],
   "author": "",
   "license": "MIT",
+  "dependencies": {
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.542.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
+  },
   "devDependencies": {
     "@types/chrome": "^0.1.4",
-    "typescript": "^5.0.0"
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^5.0.2",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^9.15.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.12.0",
+    "postcss": "^8.4.32",
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.15.0",
+    "vite": "npm:rolldown-vite@latest"
   }
 }
