--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/postcss": "^4.1.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "hotkeys-js": "^3.13.15",
@@ -38,6 +39,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.13",
     "@types/chrome": "^0.1.4",
     "@types/node": "^24.3.1",
     "@types/react": "^19.1.12",
@@ -52,7 +54,7 @@
     "globals": "^15.12.0",
     "postcss": "^8.4.32",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "^4.1.13",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.15.0",
