--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,8 +13,13 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["./content.js"],
-      "css": ["./content.css"]
+      "js": ["./content.js"]
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["content.css"],
+      "matches": ["<all_urls>"]
     }
   ],
   "permissions": ["bookmarks", "storage", "activeTab", "tabs"],
