--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "ui": "npx dlx shadcn@2.3.0 add"
   },
   "keywords": [
     "chrome-extension",
@@ -27,7 +28,6 @@
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@tailwindcss/postcss": "^4.1.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "hotkeys-js": "^3.13.15",
@@ -36,10 +36,10 @@
     "react-dom": "^19.1.1",
     "react-draggable": "^4.5.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.3.8"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.1.13",
     "@types/chrome": "^0.1.4",
     "@types/node": "^24.3.1",
     "@types/react": "^19.1.12",
@@ -54,7 +54,7 @@
     "globals": "^15.12.0",
     "postcss": "^8.4.32",
     "prettier": "^3.3.3",
-    "tailwindcss": "^4.1.13",
+    "tailwindcss": "^3.4.7",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.15.0",
