--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A Chrome bookmark manager extension written in React + TypeScript with Vite.",
   "type": "module",
   "scripts": {
-    "dev": "tsx ./build.ts",
-    "build": "tsx ./build.ts",
+    "dev": "vite",
+    "build": "vite build",
     "preview": "vite preview",
     "watch": "vite build --watch",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -40,13 +40,13 @@
     "tw-animate-css": "^1.3.8"
   },
   "devDependencies": {
+    "@crxjs/vite-plugin": "^2.2.0",
     "@types/chrome": "^0.1.4",
     "@types/node": "^24.3.1",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
     "autoprefixer": "^10.4.16",
-    "chokidar": "^4.0.3",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.37.2",
@@ -56,7 +56,6 @@
     "postcss": "^8.4.32",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.7",
-    "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.15.0",
     "vite": "npm:rolldown-vite@latest"
