--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,24 +1,26 @@
 {
   "manifest_version": 3,
-  "name": "Bookmark Plugin",
-  "version": "0.1.0",
+  "name": "Bookmark Manager",
+  "version": "1.0.0",
   "description": "A Chrome bookmark manager extension written in React + TypeScript with Vite.",
-  "background": {
-    "service_worker": "./background.js",
-    "type": "module"
-  },
   "action": {
-    "default_popup": "./index.html"
+    "default_popup": "src/entry/main.tsx",
+    "default_title": "Bookmark Manager"
+  },
+  "background": {
+    "service_worker": "src/entry/background.ts",
+    "type": "module"
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "js": ["./content.js"]
+      "js": ["src/entry/content.tsx"],
+      "css": ["src/content.css"],
+      "matches": ["<all_urls>"]
     }
   ],
   "web_accessible_resources": [
     {
-      "resources": ["content.css"],
+      "resources": ["src/content.css"],
       "matches": ["<all_urls>"]
     }
   ],
