--- a/package.json
+++ b/package.json
@@ -60,6 +60,6 @@
     "tailwindcss": "^3.4.7",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.15.0",
-    "vite": "npm:rolldown-vite@latest"
+    "vite": "latest"
   }
 }
