--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,7 +17,14 @@
       "matches": ["<all_urls>"]
     }
   ],
-  "web_accessible_resources": [],
-  "permissions": ["bookmarks", "storage", "activeTab", "tabs"],
+
+  "web_accessible_resources": [
+    {
+      "resources": ["_favicon/*"],
+      "matches": ["<all_urls>"],
+      "extension_ids": ["*"]
+    }
+  ],
+  "permissions": ["bookmarks", "storage", "activeTab", "tabs", "favicon"],
   "host_permissions": ["<all_urls>"]
 }
